--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@uiverse.io/style.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/cart.css}">
 
 </head>
 
@@ -25,8 +25,8 @@
 <header class="app-header">
     <div class="container d-flex justify-content-between align-items-center">
         <h3 class="m-0 text-white d-flex align-items-center gap-2">
-            <img th:src="@{/img/logo.jpg}" alt="شعار المغسلة" class="logo-img" />
-            <span>نظام المغسلة</span>
+            <img th:src="@{/img/logo.png}" alt="شعار المغسلة" class="logo-img" />
+
         </h3>
         <nav class="d-flex align-items-center">
             <div class="dropdown">
