--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/checkout.css}">
 
 </head>
 <body>
@@ -20,8 +20,7 @@
     <header class="app-header">
         <div class="container d-flex justify-content-between align-items-center">
             <h3 class="m-0 text-white d-flex align-items-center gap-2">
-                <img th:src="@{/img/logo.jpg}" alt="شعار المغسلة" class="logo-img" />
-                <span>نظام المغسلة</span>
+                <img th:src="@{/img/logo.png}" alt="شعار المغسلة" class="logo-img" />
             </h3>
             <nav class="d-flex align-items-center">
                 <div class="dropdown">
